# fire

./: .gitignore  CLAUDE.md  CREDITS.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md  TODO.md  architecture.md  product.json  texture-viewer-architecture.md
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: icon_256.rgba
crates/cpu-test/: Cargo.toml
crates/cpu-test/src/: main.rs  view.rs
crates/fire/: Cargo.toml  build.rs
crates/fire-daemon/: Cargo.toml  build.rs
crates/fire-daemon/examples/: adapter_probe.rs
crates/fire-daemon/shaders/: image.wgsl
crates/fire-daemon/src/: app.rs  chrome.rs  decode_pool.rs  foreground.rs  gpu.rs  ipc_server.rs  main.rs  win.rs
crates/fire-daemon/src/render/: mod.rs  shade.rs  surface.rs  uniforms.rs  view.rs
crates/fire-decode/: Cargo.toml
crates/fire-decode/src/: downscale.rs  lib.rs  raw.rs  tiff.rs
crates/fire-decode/tests/: exr.rs  hdr.rs  heif.rs  psd.rs
crates/fire-decode/tests/fixtures/: alpha.avif  alpha.heic  solid.avif  solid.heic
crates/fire-ipc/: Cargo.toml
crates/fire-ipc/src/: lib.rs
crates/fire-stub/: Cargo.toml  build.rs
crates/fire-stub/src/: main.rs
crates/fire/src/: chrome.rs  config.rs  decode_pool.rs  default_config.toml  flipbook.rs  folder.rs  foreground.rs  forward.rs  hint_chip.rs  hotstyle.rs  icons.rs  ipc_server.rs  keybinds.rs  main.rs  octagon.rs  product.rs  tooltip.rs  transport.rs  watcher.rs  win.rs  window_state.rs
crates/fire/src/render/: gpu.rs  imgui.rs  mod.rs  shade.rs  shader.hlsl  surface.rs  view.rs
crates/fire/src/settings/: mod.rs  model.rs
crates/fire/src/ui/: mod.rs  theme.rs  theme.toml
crates/fire/src/ui/settings/: mod.rs  model.rs
crates/heif-sys/: Cargo.toml  build.rs  wrapper.c  wrapper.h
crates/heif-sys/src/: lib.rs
crates/psd-sdk-sys/: Cargo.toml  build.rs  wrapper.cpp  wrapper.h
crates/psd-sdk-sys/examples/: psd_roundtrip.rs
crates/psd-sdk-sys/src/: lib.rs
crates/texview-daemon/: Cargo.toml
crates/texview-daemon/examples/: adapter_probe.rs
crates/texview-daemon/shaders/: blit.wgsl
crates/texview-daemon/src/: app.rs  decode_pool.rs  gpu.rs  ipc_server.rs  main.rs
crates/texview-decode/: Cargo.toml
crates/texview-decode/src/: lib.rs
crates/texview-ipc/: Cargo.toml
crates/texview-ipc/src/: lib.rs
crates/texview-stub/: Cargo.toml
crates/texview-stub/src/: main.rs
docs/: code-quality-audit-2026-07.md  flipbook-detection-writeup.md  imgui-migration-writeup.md  project-history.md
installer/: README.md  fire.iss
licenses/: BSD-2-Clause.txt  BSD-3-Clause.txt  MIT.txt
scripts/: build-installer.ps1
