[workspace]
resolver = "2"
members = [
    "crates/fire-ipc",
    "crates/fire",
    "crates/fire-decode",
    "crates/psd-sdk-sys",
    "crates/heif-sys",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# Centralized version lock — every member inherits these via `workspace = true`.
# These are caret requirements; the first `cargo build` resolves exact patch
# versions into Cargo.lock and proves the set is compatible.
[workspace.dependencies]
# --- windowing / render ---
# GPU presentation (D3D11 + a DXGI flip-model swapchain on a raw Win32 HWND, HLSL color
# pipeline compiled at startup) is provided by the typed `windows` crate; see its entry
# under "Windows platform APIs" below.
# POD casts in the decode path (slice reinterpretation of 16-bit pixels).
bytemuck = { version = "1", features = ["derive"] }

# --- decode ---
# zune is the hot-path decoder for the common formats.
zune-image = "0.5"
zune-core = "0.5"
image = "0.25"
exr = "1"
lcms2 = { version = "6", features = ["static"] }

# --- config / fs ---
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "8"
# Build-time only: fire's build.rs parses product.json (the single source of product
# metadata: name/version/publisher/copyright/homepage). Not linked into the binary.
serde_json = "1"

# --- clipboard ---
arboard = "3"

# --- worker messaging ---
crossbeam-channel = "0.5"

# --- Windows platform APIs (pipes, mutex, foreground, registry, shell) ---
windows = "0.61"
windows-sys = "0.60"

# --- internal crates ---
fire-ipc = { path = "crates/fire-ipc" }
fire-decode = { path = "crates/fire-decode" }
psd-sdk-sys = { path = "crates/psd-sdk-sys" }
heif-sys = { path = "crates/heif-sys" }

# --- build deps ---
cc = "1"
bindgen = "0.71"
# Embeds the Fire .ico + version/product metadata into fire.exe (Explorer file
# icon, taskbar fallback, file-properties "Product name").
winresource = "0.1"
# Build-time only: fire's build.rs rasterizes the toolbar SVGs (assets/icons/) to A8
# coverage masks embedded in the exe. resvg re-exports usvg + tiny-skia, so this one
# dep covers parse + render. Not linked into the binary (build script only).
resvg = "0.45"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
# NOTE: panic strategy is left at the default "unwind" (NOT "abort"). The decode
# crate wraps every C/C++ FFI call (psd_sdk, lcms2) in std::panic::catch_unwind so a
# malformed file cannot take down the viewer process. catch_unwind only works with
# unwinding panics, so panic=abort would silently defeat that safety net.
strip = true
