[workspace]
resolver = "2"
members = [
    "crates/fire-ipc",
    "crates/fire",
    "crates/fire-decode",
    "crates/psd-sdk-sys",
    "crates/heif-sys",
]

[workspace.package]
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# Lints, workspace-wide. Members opt in with `[lints] workspace = true`.
#
# The tree is already clean under all of these — that is the point of writing them down. CI runs
# clippy with `-D warnings`, so what is a warning here is a build failure there, and the invariants
# below stop being things you have to remember.
[workspace.lints.rust]
# An unhandled Result at an FFI or Win32 boundary is how a "best-effort" call quietly becomes a
# no-op. Deliberate discards stay legal by writing `let _ = ...`, which says so.
unused_must_use = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
todo = "warn"
unimplemented = "warn"
# NOT enabled, deliberately, and worth writing down why: the tree has ~74 `unsafe` blocks without a
# `// SAFETY:` tag. They are not undocumented — the cross-thread `PostMessage` hand-offs and the FFI
# boundaries all carry real reasoning — but the bulk are one-line Win32 calls (`GetSysColor`,
# `std::mem::zeroed()` on a POD struct) where a SAFETY tag would be ritual rather than information.
# Turning this on today would mean 74 comments written to satisfy a lint, which is how SAFETY
# comments become noise that reviewers learn to skip. Worth doing as its own pass, per module,
# where each tag can say something true.
#   undocumented_unsafe_blocks = "warn"

# Centralized version lock — every member inherits these via `workspace = true`.
# These are caret requirements; the first `cargo build` resolves exact patch
# versions into Cargo.lock and proves the set is compatible.
[workspace.dependencies]
# --- windowing / render ---
# GPU presentation (D3D11 + a DXGI flip-model swapchain on a raw Win32 HWND, HLSL color
# pipeline compiled at startup) is provided by the typed `windows` crate; see its entry
# under "Windows platform APIs" below.
# POD casts in the decode path (slice reinterpretation of 16-bit pixels).
bytemuck = { version = "1", features = ["derive"] }

# --- decode ---
# zune is the hot-path decoder for the common formats.
zune-image = "0.5"
zune-core = "0.5"
# The `image` crate is the fallback decoder (TIFF/TGA/ICO), the multi-frame GIF path, and —
# deliberately — the PNG and Radiance HDR paths, whose decoders measured faster than zune's; see
# `decode_png` / `decode_hdr`. Only the formats we actually route to it are enabled: the default
# feature set also pulls in `avif`, i.e. `ravif` -> `rav1e`, a complete AV1 *encoder* (one of the
# heaviest builds in the ecosystem) that fire can never reach — AVIF is sniffed by magic bytes and
# decoded by libheif/dav1d.
image = { version = "0.25", default-features = false, features = [
    "png",
    "gif",
    "hdr",
    "tiff",
    "tga",
    "ico",
    "bmp",
    "jpeg",
] }
# TIFF is decoded directly against this crate rather than through `image`, which collapses
# everything the `tiff` crate does not hand it as a named colour type: it drops a 4th sample it
# was not told is alpha, refuses grey+alpha outright, and narrows 16-bit to 8. Same crate
# `image` uses underneath, so this adds no build weight — see `fire-decode`'s `tiff` module.
tiff = "0.11"
exr = "1"
lcms2 = { version = "6", features = ["static"] }

# --- config / fs ---
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "8"
# Build-time only: fire's build.rs parses product.json (the single source of product
# metadata: name/version/publisher/copyright/homepage). Not linked into the binary.
serde_json = "1"

# --- worker messaging ---
crossbeam-channel = "0.5"

# --- Windows platform APIs (pipes, mutex, foreground, registry, shell) ---
windows = "0.61"
windows-sys = "0.60"

# --- internal crates ---
fire-ipc = { path = "crates/fire-ipc" }
fire-decode = { path = "crates/fire-decode" }
psd-sdk-sys = { path = "crates/psd-sdk-sys" }
heif-sys = { path = "crates/heif-sys" }

# --- build deps ---
cc = "1"
bindgen = "0.71"
# Embeds the Fire .ico + version/product metadata into fire.exe (Explorer file
# icon, taskbar fallback, file-properties "Product name").
winresource = "0.1"
# Build-time only: fire's build.rs rasterizes the toolbar SVGs (assets/icons/) to A8
# coverage masks embedded in the exe. resvg re-exports usvg + tiny-skia, so this one
# dep covers parse + render. Not linked into the binary (build script only).
resvg = "0.45"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
# NOTE: panic strategy is left at the default "unwind" (NOT "abort"). The decode
# crate wraps every C/C++ FFI call (psd_sdk, lcms2) in std::panic::catch_unwind so a
# malformed file cannot take down the viewer process. catch_unwind only works with
# unwinding panics, so panic=abort would silently defeat that safety net.
strip = true
