[package]
name = "cpu-test"
version.workspace = true
edition.workspace = true
publish = false

# Throwaway prototype: measures whether a pure-CPU (no GPU / no D3D runtime) render path
# is viable for large textures. Decodes via the real fire-decode crate, presents via
# softbuffer. Not wired into the daemon — delete the crate (and its workspace member entry)
# if the CPU path is rejected.

[dependencies]
fire-decode = { workspace = true }
winit = { workspace = true }
softbuffer = "0.4"
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }
