[package]
name = "fire-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# egui/notify/arboard/serde/toml are added in the phases that introduce them (UI,
# config) to keep iteration fast here. crossbeam-channel arrived with the Phase 2
# decode worker pool.
[dependencies]
fire-ipc.workspace = true
fire-decode.workspace = true

winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
crossbeam-channel.workspace = true

# Raw Win32 for the named-pipe server, single-instance mutex, and foreground raise.
# windows-sys (vs the typed `windows` crate) keeps these low-level calls predictable.
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
# Embeds the Fire .ico + product metadata into the exe (Explorer file icon).
winresource.workspace = true

[[example]]
name = "adapter_probe"
path = "examples/adapter_probe.rs"
