[package]
name = "fire-decode"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
zune-image.workspace = true
zune-core.workspace = true
image.workspace = true
exr.workspace = true
lcms2.workspace = true
psd-sdk-sys.workspace = true
heif-sys.workspace = true
bytemuck.workspace = true
