[package]
name = "fire-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# Intentionally minimal — linked into fire.exe and exercised on the latency-sensitive
# forward path, so it stays dependency-light (hand-rolled byte framing, no serde).
