[package]
name = "fire-stub"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# The stub is what Explorer launches. It MUST stay trivial — connect, grant
# foreground, send, exit — with no heavy dependencies, or its own startup
# reintroduces the cold-start the daemon exists to avoid (§15). Only two Win32 calls
# are needed (GetNamedPipeServerProcessId, AllowSetForegroundWindow); the pipe itself
# is opened as a plain file via std.
[dependencies]
fire-ipc.workspace = true
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
# Build-only: embeds the Fire .ico into the exe. Does NOT add runtime weight to the
# stub (the §15 "keep the stub tiny" constraint is about runtime, not build deps).
winresource.workspace = true
