[package]
name = "fire"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# Builds `fire.exe` — the whole viewer (window, render, decode pool, optional pipe). The
# default bin (package name + src/main.rs) needs no [[bin]] section.

# crossbeam-channel carries decode results from the worker pool; serde/toml read the
# startup config.
[dependencies]
fire-ipc.workspace = true
fire-decode.workspace = true

serde.workspace = true
toml.workspace = true

# CPU framebuffer → window (GDI BitBlt, no D3D), built from a raw Win32 HWND (no winit).
softbuffer = "0.4"
# raw-window-handle: only to hand the HWND to softbuffer.
raw-window-handle.workspace = true
crossbeam-channel.workspace = true

# Raw Win32: native window/message loop, named-pipe server, single-instance mutex,
# foreground raise, and the GDI-painted chrome (toolbar/status bar). windows-sys (vs the
# typed `windows` crate) keeps these calls predictable.
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",            # read the dark-mode preference (AppsUseLightTheme)
    "Win32_Graphics_Gdi",               # GDI painting of the toolbar/status chrome
    "Win32_Graphics_Dwm",               # dark title bar (DwmSetWindowAttribute)
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",                   # Per-Monitor-V2 awareness + GetDpiForWindow
] }

[build-dependencies]
# Embeds the Fire .ico + product metadata into the exe (Explorer file icon).
winresource.workspace = true
