[package]
name = "heif-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"
# Declares this crate owns the native `heif` link, so the static stack is linked once.
links = "heif"

[dependencies]

[build-dependencies]
cc.workspace = true
bindgen.workspace = true

[lints]
workspace = true
