[package]
name = "psd-sdk-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]

[build-dependencies]
# cc compiles the vendored psd_sdk C++ + the extern "C" wrapper into a static lib;
# bindgen generates the Rust FFI declarations from the C-ABI wrapper.h.
cc.workspace = true
bindgen.workspace = true

[lints]
workspace = true
