[package]
name = "texview-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# Phase 1 dependency set (the walking skeleton). egui/notify/arboard/serde/toml +
# crossbeam-channel are added in the phases that introduce them (UI, config, worker
# pool) to keep iteration fast here.
[dependencies]
texview-ipc.workspace = true
texview-decode.workspace = true

winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true

# Raw Win32 for the named-pipe server, single-instance mutex, and foreground raise.
# windows-sys (vs the typed `windows` crate) keeps these low-level calls predictable.
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[[example]]
name = "adapter_probe"
path = "examples/adapter_probe.rs"
